[package]
name = "latios-lob"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = { version = "1.0.102", features = ["backtrace"] }
bumpalo = "3.20.2"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
fixed = "1.31.0"
mimalloc = "0.1.50"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "real_blackbox", "csv_output"] }

[[bench]]
name = "order_book"
harness = false
